@@ -31,6 +31,7 @@ New Features
   * finagle-core: `Fail fast <https://twitter.github.io/finagle/guide/FAQ.html#why-do-clients-see-com-twitter-finagle-failedfastexception-s>`_
     is now `configurable <https://twitter.github.io/finagle/guide/FAQ.html#configuring-finagle6>`_
     on Stack-based clients via the `com.twitter.finagle.FailFastFactory.FailFast` param.
+  * finagle-mysql: Add support for MySQL transactions.
 
 Bug Fixes
 ~~~~~~~~~
